# SpotMAX

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  README.rst  environment.yml  environment_gui.yml  pinn-harmonic-oscillator.ipynb  pyproject.toml  requirements_gui_pyqt6.txt  setup.cfg  x_slice_idxs.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  informal-request.yml
.github/workflows/: build-macos_pyqt5.yml  build-macos_pyqt6.yml  build-ubuntu_pyqt5.yml  build-windows_pyqt5.yml  build-windows_pyqt6.yml  inactive-issues.yml
examples/: compute_spots_features.py  example_config_params.ini  example_config_params_mitochondria.ini  example_config_params_smFISH.ini
examples/images/mitochondria/: ASY15-1_0nM-10_s10_segm.npz
examples/ini_config_files_templates/: 2024-01-24_16-52-23_mtDNA_yeast_tutorial_parameters_spotMAX_report.rst  2024-02-12_14-05-47_example_config_params_mitochondria_spotMAX_report.rst  2024-02-29_09-21-37_example_config_params_mitochondria_spotMAX_report.rst  2024-03-05_14-51-25_example_config_params_mitochondria_spotMAX_report.rst  2024-03-12_08-53-49_example_config_params_mitochondria_spotMAX_report.rst  2024-03-12_09-00-34_example_config_params_mitochondria_spotMAX_report.rst  2024-04-15_21-17-18_mtDNA_yeast_tutorial_parameters_spotMAX_report.rst  example_config_params_mitochondria.ini  example_config_params_smFISH.ini  mtDNA_yeast_tutorial_parameters.ini  smFISH_yeast_tutorial_parameters.ini
examples/notebooks/: spot_detection_from_image_file.ipynb  spots_synthetic_simple.ipynb
examples/scripts/: spot_detection_from_image_file.py  spots_synthetic_simple.py
examples/test_data_gui/mito_mtDNA_yeast/Position_16/Images/: ASY15-1_15nM-16_s16_metadata.csv  ASY15-1_15nM-16_s16_segm.npz  ASY15-1_15nM-16_s16_segmInfo.csv
spotmax/: __init__.py  __main__.py  _debug.py  _docs.py  _old_gui.py  _process.py  _process_watchdog.py  _run.py  _version.py  _warnings.py  autotune.py  colors.py  config.ini  config.py  core.py  data.py  deprecated.py  dialogs.py  dock_params_callbacks.py  docs.py  features.py  filters.py  gui.py  html_func.py  io.py  load.py  metrics.py  pipe.py  prompts.py  qrc_resources.py  qrc_resources_spotmax.py  qtworkers.py  resources.qrc  test.py  transformations.py  tune.py  types.py  utils.py  widgets.py
spotmax/BioImageIO/: __init__.py  create_model_resource.ipynb  create_model_resource.py  model.py  test_any_model_gui.py  test_any_model_script.py
spotmax/BioImageIO/SpotMAX_UNet_2D/: README.md  create_io_samples.py  create_model_resource.py  environment.yml  input_sample.npy  model_usage.py  output_sample_mask.npy
spotmax/BioImageIO/SpotMAX_UNet_2D/Input_sample_Positions/: source_path.txt
spotmax/BioImageIO/SpotMAX_UNet_2D/Input_sample_Positions/Position_11/Images/: ASY15-1_60nM-11_s11_mNeon3Dspot_segm_leo_manual_coords.csv  ASY15-1_60nM-11_s11_m_run_num1_mKate_ref_ch_segm_mask_mNeon.npz  ASY15-1_60nM-11_s11_metadata.csv  ASY15-1_60nM-11_s11_run_num1_mKate_ref_ch_segm_mask_mNeon.npz  ASY15-1_60nM-11_s11_segm.npz  ASY15-1_60nM-11_s11_segmInfo.csv
spotmax/BioImageIO/SpotMAX_UNet_3D/: create_io_samples.py  input_sample.npy  output_sample_mask.npy
spotmax/Spotiflow/: __init__.py  spotiflow_smax_model.py
spotmax/docs/: Makefile  __init__.py  requirements-MBFVFGN0T5Q05N.txt  requirements.txt
spotmax/docs/source/: aggr_features_description.rst  ai_params.rst  analysis_parameters_tab.rst  conf.py  contributing.rst  features_description.rst  get_started.rst  how_to_gui.rst  index.rst  inspect_results_tab.rst  installation.rst  output_files.rst  parameters_description.rst  run_gui.rst  single_spot_features_description.rst  tune_parameters_tab.rst
spotmax/docs/source/_static/css/: custom.css  rtd_dark.css
spotmax/docs/source/api/: api.rst  spotmax.pipe.rst
spotmax/docs/source/features/: _background_description.rst  _effect_size_Cohen_formula.rst  _effect_size_Glass_formula.rst  _effect_size_Hedge_formula.rst  _effect_size_description.rst  _effect_size_formulas.rst  aggr_features_description.rst  index.rst  ref_ch_features_description.rst  single_spot_features_description.rst
spotmax/docs/source/gui/: analysis_parameters_tab.rst  index.rst  inspect_results_tab.rst
spotmax/docs/source/how_it_works/: index.rst  ref_ch_segm.rst  spot_detect.rst  spot_pred.rst  spot_quant.rst
spotmax/docs/source/install/: _conda_create_activate_acdc.rst  _install_numba.rst  cuda.rst  hpc.rst  index.rst  latest.rst  source.rst  stable.rst
spotmax/docs/source/misc/: cite.rst  contributing.rst  get_started.rst  install.rst  output_files.rst  publications.rst
spotmax/docs/source/parameters/: ai_params.rst  parameters_description.rst  parameters_tuning.rst
spotmax/docs/source/run/: index.rst  run_cli.rst  run_py_pkg.rst
spotmax/docs/source/run/gui/: analysis_parameters_tab.rst  index.rst  inspect_results_tab.rst  tune_parameters_tab.rst
spotmax/docs/source/static/css/: custom.css
spotmax/docs/source/tutorials/: index.rst  mtDNA_yeast.rst  smFISH_yeast.rst
spotmax/html_files/: gui_welcome.html
spotmax/nnet/: __init__.py  _predict_single_image.py  config.yaml  model-MBFVFGN0T5Q05N.py  model.py  preprocess.py  transform.py
spotmax/nnet/data/: single_image.tiff  single_label.tiff
spotmax/nnet/models/: __init__.py  nd_model.py  unet2d_model.py  unet3D_model.py
spotmax/nnet/models/pytorch3dunet/datasets/: utils.py
spotmax/nnet/models/pytorch3dunet/unet3d/: losses.py
spotmax/nnet/models/unet3D/datasets/: hdf5.py  utils.py
spotmax/nnet/models/unet3D/unet3d/: model.py  predictor.py  trainer.py  utils.py
spotmax/settings/: colorItems.json  gui_settings.csv  last_entries_metadata.csv  left_last_sel.txt  recentPaths.csv
spotmax/tests/: benchmark_read_hdf.py  test_h5py.py  test_shift_chunk_h5.py  test_skimage_find_contours.py
spotmax/tests/pyqt/: test_pause_resume_thread.py
src/: core.py  dialogs.py  gui.py  load.py  qrc_resources.py  qtworkers.py  resources.qrc  test.py  utils.py  widgets.py
(+19 files in other folders)
