[build-system]
requires = [
  "setuptools>=45",
  "wheel",
  "setuptools_scm[toml]>=6.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "spotmax"
authors = [
    { name = "Francesco Padovani", email = "francesco.padovani@helmholtz-muenchen.de" },
]
description = "Automatic 3D detection and quantification of fluorescent objects"
keywords = [
    "3D fluorescent signal analysis",
    "image analysis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dynamic = [
    "version",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/ElpadoCan/spotMAX_v2"
"Author contact" = "https://www.helmholtz-munich.de/ife/about-us/people/staff-detail/ma/8873/Dr.-Padovani/index.html"
"Schmoller lab" = "https://www.helmholtz-munich.de/ife/research/kurt-schmoller-cell-and-organelle-size-control/research/index.html"

[project.optional-dependencies]
all = [
    "numba",
    "torch",
    "pyyaml",
    "pytorch3dunet @ git+https://github.com/ElpadoCan/pytorch3dunet.git",
]

[project.scripts]
spotmax = "spotmax.__main__:run"
smax = "spotmax.__main__:run"
browseini = "spotmax.io:browse_last_used_ini_folderpath"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools_scm]
write_to = "spotmax/_version.py"

# Ignore DeprecationWarnings
[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]
