[metadata]
name = spotmax
author = Francesco Padovani and Benedikt Mairhoermann
author_email = francesco.padovani@helmholtz-muenchen.de
description = Automatic 3D detection and quantification of fluorescent objects
keywords =
    3D fluorescent signal analysis
    image analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ElpadoCan/spotMAX_v2
project_urls =
    Author contact = https://www.helmholtz-munich.de/ife/about-us/people/staff-detail/ma/8873/Dr.-Padovani/index.html
    Schmoller lab = https://www.helmholtz-munich.de/ife/research/kurt-schmoller-cell-and-organelle-size-control/research/index.html
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: BSD License
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Utilities

[options]
packages = find:
python_requires =
    >=3.7
include_package_data = True
install_requires =
    opencv-python-headless
    natsort
    h5py
    tables
    scikit-image
    tqdm
    setuptools-scm
    pandas

[options.extras_require]
gui = cellacdc

[options.entry_points]
console_scripts =
    spotmax = spotmax.__main__:run
